# odp-sdk-python

./: .gitignore  .pre-commit-config.yaml  CastFunctions.py  DataStatsFunctions.py  Example  Example Notebook Data coverage.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  client.py  data_stats_functions.py  mapMath.py  pyproject.toml  requirements-test.txt  requirements-utils.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  run_examples_test.yml  static_analysis.yml  unit_tests.yml
.ipynb_checkpoints/: ExampleNotebook-01-checkpoint.ipynb  ExampleNotebook-02-checkpoint.ipynb
Examples/: Basic Usage.ipynb  CasstFunctions.py  CastFunctions.py  DataMaps.py  DataStatsFunctions.py  Download casts and interpolate to a gridded map.ipynb  Example Notebook Basic Usage.ipynb  Example Notebook Data Exploration.ipynb  Example Notebook Data coverage.ipynb  Example Notebook Gridding data from Ocean Data Platform 2D and 3D.ipynb  Example Notebook Gridding data from Ocean Data Platform.ipynb  Example Notebook Marine Regions.ipynb  Example Notebook Temperature Change.ipynb  ExampleNotebook-01.ipynb  Gridding data from Ocean Data Platform 2D and 3D.ipynb  ODP_SDK_demo.ipynb  Python_SDK_user_testing.ipynb  README.md  Temperature Change.ipynb  UtilityFunctions.py  __init__.py  requirements_func.txt
client/odp_sdk/: client.py
client/odp_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst  odp.rst
docs/source/_static/: style.css
docs/source/_templates/: layout.html
examples/: README.md  catalog_client_example.py  catalog_oqs_query_example.py  list_resources_example.py  observables_example.py  raw_client.py  raw_client_example.py  raw_client_file_example.py  tabular_client_example.py  tabular_geography.py
examples/workspace_examples/: raw-roundtrip.ipynb  tabular-roundtrip.ipynb
odp_sdk/: __init__.py  auth.py  client.py  exc.py  http_client.py  raw_storage_client.py  resource_client.py  tabular_storage_client.py
odp_sdk/dto/: __init__.py  dataset_dto.py  exception_dto.py  file_dto.py  pagination_dto.py  resource_dto.py  schema.py  table_spec.py  tabular_store.py
odp_sdk/math/: __init__.py  odp_geo.py
odp_sdk/oqs/: oqs_base.py
odp_sdk/utils/: __init__.py  geometry_conversion.py  json.py  ndjson.py  package_utils.py
odp_sdk/utils/numeric/: __init__.py  casts.py
odp_sdk/utils/visual/: __init__.py  casts.py
scripts/: migrate_local_deps.py  test_example_basic_usage_ipynb.py
src/dto/: README.md  pyproject.toml
src/dto/odp/dto/: __init__.py  metadata.py  resource.py  resource_registry.py  resource_status.py  validators.py
src/dto/odp/dto/catalog/: __init__.py  _rg.py  data_collection.py  dataset.py  observable.py
src/dto/odp/dto/common/: contact_info.py  license.py
src/dto/odp/dto/registry/: __init__.py  _rg.py  observable_class.py
src/dto/tests/test_dto/: conftest.py  test_dto_base.py  test_resource_registry.py  test_validators.py  utils.py
src/sdk/: README.md  pyproject.toml
src/sdk/odp/client/: __init__.py  auth.py  client.py  exc.py  raw_storage_client.py  tabular_storage_client.py  tabular_storage_v2_client.py
src/sdk/odp/client/dto/: file_dto.py
src/sdk/odp/client/tabular_v2/big/: __init__.py  big.py  buffer.py  local.py  ref.py  remote.py
src/sdk/odp/client/tabular_v2/bsquare/: __init__.py  bsquare.py  query.py
src/sdk/odp/client/tabular_v2/client/: __init__.py  client.py  table_cursor.py  table_tx.py  tablehandler.py
src/sdk/odp/client/tabular_v2/util/: cache.py  exp.py  reader.py  util.py
src/sdk/odp/client/utils/: ndjson.py
src/sdk/odp_sdk/: __init__.py  http_client.py  raw_storage_client.py  resource_client.py  tabular_storage_client.py
src/sdk/odp_sdk/dto/: resource_dto.py  table_spec.py
src/sdk/odp_sdk/utils/: geometry_conversion.py  ndjson.py
src/sdk/tests/fixtures/: auth_fixtures.py
src/sdk/tests/test_sdk/: test_http_client.py  test_raw_storage_client.py  test_resource_client.py  test_tabular_storage_client.py
src/sdk/tests/test_sdk/fixtures/: __init__.py  auth_fixtures.py  dto_fixtures.py  jwt_fixtures.py  odp_http_client_fixtures.py  request_fixtures.py  time_fixtures.py
src/sdk/tests/test_sdk/test_auth/: test_azure_token_provider.py  test_get_default_token_provider.py  test_jwks_token_provider.py  test_odp_workspace_token_provider.py
src/sdk/tests/test_sdk/test_utils/: test_dto.py  test_geometry_conversion.py  test_ndjson.py  test_package_utils.py
src/sdk/tests/test_unit/: test_raw_storage_client.py
src/sdk/tests/test_unit/test_auth/: test_azure_token_provider.py  test_get_default_token_provider.py
src/utils/: README.md  pyproject.toml
src/utils/odp/utils/gridded/: __init__.py  gridded_on_raw.py
test/: test_client.py
test/fixtures/: __init__.py  dto_fixtures.py  jwt_fixtures.py  odp_http_client_fixtures.py
test/test_unit/: test_example.py  test_imports.py  test_math_odp_geo.py  test_raw_storage_client.py  test_resource_client.py
test/test_unit/test_auth/: test_jwks_token_provider.py
test/test_unit/test_utils/: test_ndjson.py
tests/: test_raw_storage_client.py
tests/fixtures/: __init__.py  auth_fixtures.py  dto_fixtures.py  jwt_fixtures.py  odp_http_client_fixtures.py
tests/test_examples/: conftest.py  test_catalog.py  test_catalog_client_example.py  test_catalog_oqs_query_example.py  test_observables_example.py  test_raw_client_example.py  test_tabular_client_example.py  test_tabular_geography.py  test_tabular_v2_client_example.py
tests/test_unit/: test_http_client.py  test_raw_storage_client.py  test_resource_client.py  test_tabular_storage_client.py
tests/test_unit/test_auth/: test_azure_token_provider.py  test_get_default_token_provider.py  test_jwks_token_provider.py  test_odp_workspace_token_provider.py
tests/test_unit/test_examples/: test_catalog.py  test_catalog_client_example.py  test_catalog_oqs_query_example.py  test_observables_example.py  test_raw_client_example.py  test_tabular_geography.py
tests/test_unit/test_utils/: test_ndjson.py  (+1 more)
