[tool.poetry]
name = "odp-sdk"
version = "0.4.8"
description = "ODP Python SDK"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]
license = "MIT"
readme = "README.md"
packages = [{include = "odp_sdk"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
cryptography = ">=41.0.5,<43.0.0"
pyjwt = "^2.8.0"
msal = "^1.24.1"
msal-extensions = "^1.1.0"
pandas = { version = "^2.1.4", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
flake8-pyproject = "^1.2.2"
responses = "^0.23.1"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = "true"
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.flake8]
ignore = ["E203", "E731", "W503"]
per-file-ignores = ["*/__init__.py:F401", "tests/*:F841"]
max-line-length = 120
count = true

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
profile="black"
known_local_folder="odp,tests"

[tool.poetry.extras]
pandas = ["pandas"]
