[tool.poetry]
description = "ODP Python SDK project"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
odp-sdk = { path = "./src/sdk", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = "true"
asyncio_mode = "auto"
testpaths = [
    "src/sdk/tests",
]

[tool.flake8]
ignore = ["E203", "E731", "W503"]
per-file-ignores = ["*/__init__.py:F401", "tests/*:F841", "*/tests/*:F841"]
max-line-length = 120
count = true

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
profile="black"
known_local_folder="odp,tests"

[tool.poetry.extras]
pandas = ["pandas"]
