[tool.poetry]
description = "ODP Python SDK project"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
odp-dto = { path = "./src/dto", develop = true }
odp-sdk = { path = "./src/sdk", develop = true }
jupyter = "^1.0.0"
pyarrow = "^18.1.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^7.4.3"
coverage = "^7.3.2"
flake8-pyproject = "^1.2.2"
responses = "^0.23.1"
pandas = "^2.1.4"

[tool.poetry.group.helper-scripts]
optional = true

[tool.poetry.group.helper-scripts.dependencies]
typer = "^0.12.3"
tomli = "^2.0.1"
tomli-w = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = "true"
asyncio_mode = "auto"
log_level = "INFO"
log_format = "%(asctime)s  %(levelname)s  %(message)s [%(filename)s:%(lineno)d]"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "src/sdk/tests",
    "src/dto/tests",
]

[tool.flake8]
ignore = ["E203", "E731", "W503"]
per-file-ignores = ["*/__init__.py:F401", "tests/*:F841", "*/tests/*:F841"]
max-line-length = 120
count = true

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
profile="black"
known_local_folder="src,tests"

[tool.poetry.extras]
pandas = ["pandas"]
