[tool.poetry]
name = "odp-sdk"
version = "0.4.10"
description = "ODP Python SDK"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]
packages = [
    {include="odp_sdk"},
]


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
cryptography = ">=41.0.5,<43.0.0"
pyjwt = "^2.8.0"
msal = "^1.24.1"
msal-extensions = "^1.1.0"
pandas = { version = "^2.1.4", optional = true}
shapely = "^2.0.4"
geojson = "^3.1.0"
validators = "^0.28.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^7.4.3"
coverage = "^7.3.2"
flake8-pyproject = "^1.2.2"
responses = "^0.23.1"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"