[tool.poetry]
name = "odp-utils"
version = "0.4.10"
description = "ODP Python Utilities"
authors = ["Thomas Li Fredriksen <thomas.fredriksen@oceandata.earth>"]
license = "MIT"
readme = "README.md"
packages = [
    {include="odp"},
    {include="odp/utils/py.typed"},
]


[tool.poetry.dependencies]
python = "^3.9"
odp-sdk = { path = "../sdk", develop = true }
zarr = { version = "^2.18.3", python = "^3.10" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
